Logo left align in responsive, hero text padding fix

--- a/styles.css
+++ b/styles.css
@@ -122,7 +122,6 @@ header {
   width: 100%;
   z-index: 100;
   padding: 20px 0;
-  margin-left: -160px;
 }
 
 header .container {
@@ -1218,14 +1217,14 @@ footer {
   }
 
   .logo-img {
-    margin-left: 12px;
+    margin-left: 0;
     margin-right: 0;
     margin-top: 0;
   }
 
   .lang-en .logo-img,
   .lang-ta .logo-img {
-    margin-left: 33px;
+    margin-left: 0;
   }
 
   .hero-content {
@@ -1238,7 +1237,7 @@ footer {
   }
 
   .hero .container {
-    padding-top: 130px;
+    padding-top: 100px;
     padding-bottom: 80px;
   }
 
@@ -1675,7 +1674,7 @@ footer {
   }
 
   .hero .container {
-    padding-top: 130px;
+    padding-top: 100px;
     padding-bottom: 80px;
   }
 
